Closed Bug 1665724 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::dom::ScriptLoadRequest::MaybeCancelOffThreadScript]

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed

People

(Reporter: sefeng, Assigned: denispal)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/b365790f-9d07-44e3-bdc8-585060200916

Top 10 frames of crashing thread:

0 libxul.so mozilla::dom::ScriptLoadRequest::MaybeCancelOffThreadScript dom/script/ScriptLoadRequest.cpp:158
1 libxul.so mozilla::dom::ScriptLoadRequest::~ScriptLoadRequest dom/script/ScriptLoadRequest.cpp:117
2 libxul.so mozilla::dom::ScriptLoadRequest::~ScriptLoadRequest dom/script/ScriptLoadRequest.cpp:108
3 libxul.so void nsPurpleBuffer::VisitEntries<SnowWhiteKiller> xpcom/base/nsCycleCollector.cpp:942
4 libxul.so nsCycleCollector_doDeferredDeletionWithBudget xpcom/base/nsCycleCollector.cpp:3889
5 libxul.so AsyncFreeSnowWhite::Run js/xpconnect/src/XPCJSRuntime.cpp:154
6 libxul.so IdleRunnableWrapper::Run xpcom/threads/nsThreadUtils.cpp:348
7 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:514
8 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
9 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87

This seems to be a new kind of crash in Nightly, looks like bug 1652126 introduces it. There are not a lot of crashes, however it does crash on multiple platforms from various installations.

They seem like a real crash, not something caused by bad memory bits.

I think the problem here may be that I need to clear aRequest->mRunnable if the user goes OOM while trying to off thread compile.

Assignee: nobody → dpalmeiro
Status: NEW → ASSIGNED
Pushed by dpalmeiro@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/484f95173d20 Clear mRunnable of request if user goes OOM while trying to off-thread compile. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Regressed by: 1652126
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: