Bug 1665724: Clear mRunnable of request if user goes OOM while trying to off-thread compile.  r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D90645